--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -5,6 +5,7 @@ android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:textSize="120sp"
 android:gravity="center_horizontal"
-android:textColor="#0000ff"
+android:textColor="@android:color/holo_orange_light"
+    android:textStyle="bold"
 android:padding="5dip" />
 
