--- a/app/src/main/res/layout/activity_open.xml
+++ b/app/src/main/res/layout/activity_open.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.pretenders.monish.LoginActivity"
-    style="@style/AppTheme">
+    style="@style/AppTheme"
+    android:background="#f9f9d1">
 
     <Button
         android:layout_width="wrap_content"
@@ -27,14 +28,15 @@
         android:text="סע"
         android:id="@+id/button2"
         android:textSize="36sp"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/holo_orange_light"
         android:textStyle="bold"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:textColor="#ffffff" />
+        android:textColor="#ffffff"
+        android:visibility="invisible" />
 
     <ProgressBar
         style="@android:style/Widget.ProgressBar.Horizontal"
@@ -49,9 +51,9 @@
         android:max="11"
         android:paddingLeft="6dp"
         android:paddingRight="6dp"
-        android:layout_alignBottom="@+id/textView2"
+        android:visibility="invisible"
         android:layout_alignTop="@+id/textView2"
-        android:visibility="invisible" />
+        android:layout_alignBottom="@+id/textView2" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -73,9 +75,8 @@
         android:text="מנימום נוסעים: 11"
         android:id="@+id/textView3"
         android:paddingRight="6dp"
-        android:layout_above="@+id/progressBar"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-
+        android:layout_below="@+id/button"
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp" />
 
 </RelativeLayout>
